--- a/4.Print_the_subarray_having_maximum_sum.md
+++ b/4.Print_the_subarray_having_maximum_sum.md
@@ -14,25 +14,52 @@
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
-int main() {
-  int n;
-  vector <int> a(n);
-  for (int i = 0; i < n; i++) cin >> a[i];
-  int start = -1, ansStart = -1, ansEnd = -1, maxi = LLONG_MIN, sum = 0;
-  for (int i = 0; i < n; i++) {
-      if (sum == 0) start = i;
-      sum += a[i];
-      if (sum > maxi) {
-          maxi = sum;
-          ansStart = start;
-          ansEnd = i;
-      }
-      if (sum < 0) {
-          sum = 0;
-      }
-  }
-  for (int i = ansStart; i <= ansEnd; i++) {
-      cout << a[i] << i << " ";
-  }
+long long maxSubarraySum(int arr[], int n) {
+    long long maxi = LONG_MIN; // maximum sum
+    long long sum = 0;
+
+    int start = 0;
+    int ansStart = -1, ansEnd = -1;
+    for (int i = 0; i < n; i++) {
+
+        if (sum == 0) start = i; // starting index
+
+        sum += arr[i];
+
+        if (sum > maxi) {
+            maxi = sum;
+
+            ansStart = start;
+            ansEnd = i;
+        }
+
+        // If sum < 0: discard the sum calculated
+        if (sum < 0) {
+            sum = 0;
+        }
+    }
+
+    //printing the subarray:
+    cout << "The subarray is: [";
+    for (int i = ansStart; i <= ansEnd; i++) {
+        cout << arr[i] << " ";
+    }
+    cout << "]n";
+
+    // To consider the sum of the empty subarray
+    // uncomment the following check:
+
+    //if (maxi < 0) maxi = 0;
+
+    return maxi;
+}
+
+int main()
+{
+    int arr[] = { -2, 1, -3, 4, -1, 2, 1, -5, 4};
+    int n = sizeof(arr) / sizeof(arr[0]);
+    long long maxSum = maxSubarraySum(arr, n);
+    cout << "The maximum subarray sum is: " << maxSum << endl;
+    return 0;
 }
 ```
